--- a/src/components/Css/Navbar.css
+++ b/src/components/Css/Navbar.css
@@ -65,6 +65,7 @@
 
 	.NavbarItems {
 		position: relative;
+		flex: 1;
 	}
 
 	.nav-menu {
