--- a/src/components/Css/Skillspage.css
+++ b/src/components/Css/Skillspage.css
@@ -1,6 +1,6 @@
 .card {
-	max-width: 32rem;
-	max-height: 34rem;
+	max-width: 37rem;
+	max-height: 39rem;
 	padding-bottom: 4rem;
 }
 .card-img-top {
