--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,7 +11,7 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 	box-sizing: border-box;
 	position: relative;
-	min-height: 100%;
+	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
 }
